docs: Configuración completa para despliegue en AWS
- Actualizado .env.example con configuración completa
- Creado CONFIGURAR_RDS_AWS.md con guía de setup de base de datos
- Nombres actualizados a dulceria_lilis_db y lilis_user
- Agregada configuración de AWS S3, email Resend
- Incluye config para desarrollo local y producción RDS
- Documentación de ALLOWED_HOSTS, timezone y language
- Notas de seguridad y mejores prácticas

--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,89 @@
-# .env (ejemplo)
-DJANGO_SECRET_KEY=supersecret
+# ===================================
+# CONFIGURACIÓN DULCERÍA LILIS
+# ===================================
+# Copiar este archivo como .env y configurar los valores
+# Comando: copy .env.example .env (Windows) | cp .env.example .env (Linux)
+
+# ===================================
+# DJANGO SETTINGS
+# ===================================
+
+# Debug mode - IMPORTANTE: Cambiar a False en producción
 DJANGO_DEBUG=True
 
-# Configuración para MySQL
+# Secret Key - Generar una nueva con:
+# python -c 'from django.core.management.utils import get_random_secret_key; print(get_random_secret_key())'
+DJANGO_SECRET_KEY=django-insecure-cambiar-esta-clave-en-produccion
+
+# Hosts permitidos (separados por comas, sin espacios)
+# Agregar el dominio de tu servidor EC2 o dominio personalizado
+DJANGO_ALLOWED_HOSTS=127.0.0.1,localhost,ec2-54-123-45-67.us-east-1.compute.amazonaws.com
+
+# ===================================
+# DATABASE CONFIGURATION
+# ===================================
+
+# Motor de base de datos: mysql o sqlite
 DB_ENGINE=mysql
-DB_NAME=dulceria_lilis
-DB_USER=lili_user
-DB_PASSWORD=lili_password123
-DB_HOST=localhost
+
+# Configuración MySQL - Local (Desarrollo)
+# DB_NAME=dulceria_lilis
+# DB_USER=lili_user
+# DB_PASSWORD=lili_password123
+# DB_HOST=localhost
+# DB_PORT=3306
+
+# Configuración MySQL - RDS AWS (Producción)
+DB_NAME=dulceria_lilis_db
+DB_USER=lilis_user
+DB_PASSWORD=L1l1s_S3cur3_P4ssw0rd!
+DB_HOST=dulceria-lilis.chf1shttozye.us-east-1.rds.amazonaws.com
 DB_PORT=3306
+
+# ===================================
+# REGIONAL SETTINGS
+# ===================================
+
+# Idioma del sistema
+DJANGO_LANGUAGE_CODE=es-cl
+
+# Zona horaria
+DJANGO_TIME_ZONE=America/Santiago
+
+# ===================================
+# AWS S3 SETTINGS (Producción)
+# ===================================
+
+# Usar S3 para archivos media (True en producción, False en desarrollo)
+USE_S3=False
+
+# Credenciales AWS S3 (solo si USE_S3=True)
+AWS_ACCESS_KEY_ID=tu_access_key_id
+AWS_SECRET_ACCESS_KEY=tu_secret_access_key
+AWS_STORAGE_BUCKET_NAME=dulceria-lilis-media
+AWS_S3_REGION_NAME=us-east-1
+
+# ===================================
+# EMAIL CONFIGURATION (Resend)
+# ===================================
+
+RESEND_API_KEY=re_tu_api_key_de_resend
+RESEND_FROM_EMAIL=noreply@dulcerialilis.cl
+RESEND_TEST_EMAIL=tu_email@ejemplo.com
+COMPANY_NAME=Dulcería Lilis
+
+# ===================================
+# NOTAS IMPORTANTES
+# ===================================
+# 
+# 1. NUNCA subir el archivo .env a Git
+# 2. En producción, cambiar DJANGO_DEBUG=False
+# 3. Generar una SECRET_KEY única y segura
+# 4. Configurar ALLOWED_HOSTS con dominios reales
+# 5. Usar contraseñas seguras para la base de datos
+# 6. Mantener las credenciales AWS seguras
+#
+# En settings.py usar:
+#   ALLOWED_HOSTS = os.getenv("DJANGO_ALLOWED_HOSTS", "").split(",")
+#   LANGUAGE_CODE = os.getenv("DJANGO_LANGUAGE_CODE", "es-cl")
+#   TIME_ZONE = os.getenv("DJANGO_TIME_ZONE", "America/Santiago")
