config: Agregar credenciales RDS en .env.example para proyecto de desarrollo

--- a/.env.example
+++ b/.env.example
@@ -35,8 +35,8 @@ DB_ENGINE=mysql
 
 # Configuración MySQL - RDS AWS (Producción)
 DB_NAME=dulceria_lilis_db
-DB_USER=lilis_user
-DB_PASSWORD=L1l1s_S3cur3_P4ssw0rd!
+DB_USER=admin
+DB_PASSWORD=Beev3_2024
 DB_HOST=dulceria-lilis.chf1shttozye.us-east-1.rds.amazonaws.com
 DB_PORT=3306
 
