--- a/.env.production.example
+++ b/.env.production.example
@@ -1,29 +1,47 @@
-# Configuración de Producción - AWS
-# Copiar a .env en el servidor EC2
+# ===================================
+# CONFIGURACIÓN DULCERÍA LILIS - PRODUCCIÓN AWS
+# ===================================
 
 # Django
 DJANGO_DEBUG=False
-DJANGO_SECRET_KEY=tu-secret-key-super-segura-aqui
-DJANGO_ALLOWED_HOSTS=tu-dominio.com,www.tu-dominio.com,ip-de-ec2
+DJANGO_SECRET_KEY=tu_clave_segura
+# Generar: python3 -c 'from django.core.management.utils import get_random_secret_key; print(get_random_secret_key())'
 
+DJANGO_ALLOWED_HOSTS=127.0.0.1,localhost,ec2-3-95-220-101.us-east-1.compute.amazonaws.com
+DJANGO_LANGUAGE_CODE=es-cl
+DJANGO_TIME_ZONE=America/Santiago
+
+# ===================================
 # Base de datos (RDS MySQL)
-DB_NAME=dulceria_lilis_prod
-DB_USER=admin
-DB_PASSWORD=tu-password-seguro
-DB_HOST=tu-rds-endpoint.rds.amazonaws.com
+# ===================================
+
+DB_ENGINE=mysql
+DB_NAME=dulceria_lilis_db
+DB_USER=lilis_user
+DB_PASSWORD=L1l1s_S3cur3_P4ssw0rd!
+DB_HOST=dulceria-lilis.chf1shttozye.us-east-1.rds.amazonaws.com
 DB_PORT=3306
 
-# Amazon S3 para archivos media
+# ===================================
+# AWS S3 (Archivos multimedia)
+# ===================================
+
 USE_S3=True
-AWS_ACCESS_KEY_ID=tu-access-key-id
-AWS_SECRET_ACCESS_KEY=tu-secret-access-key
+AWS_ACCESS_KEY_ID=TU_ACCESS_KEY
+AWS_SECRET_ACCESS_KEY=TU_SECRET_KEY
 AWS_STORAGE_BUCKET_NAME=dulceria-lilis-media
 AWS_S3_REGION_NAME=us-east-1
 
+# ===================================
 # Email (Resend)
-RESEND_API_KEY=re_tu_api_key
-RESEND_FROM_EMAIL=noreply@tu-dominio.com
-# RESEND_TEST_EMAIL=  # Comentar en producción
+# ===================================
 
-# Nombre de la empresa
-COMPANY_NAME=Dulcería Lilis
+RESEND_API_KEY=re_U7GLhZyZ_9GCv9DF3aVgDepLzuA9NNjyS
+RESEND_FROM_EMAIL=onboarding@resend.dev
+RESEND_TEST_EMAIL=alvaro.elo@alumnos.ucn.cl
+
+# ===================================
+# Otros
+# ===================================
+
+COMPANY_NAME="Dulcería Lilis"
